CHANGES IN VERSION 2.9.1
------------------------
 o Delete RAMPAdapter pointer in pwiz backend (by jotsetung)
   <2016-11-20 Sun>

CHANGES IN VERSION 2.9.0
------------------------
 o Bioc devel 3.5
 
CHANGES IN VERSION 2.8.0
------------------------
 o Bioc release 3.4

CHANGES IN VERSION 2.7.13
-------------------------
 o Fix waring on OSX (see issue #60)
 
CHANGES IN VERSION 2.7.12
-------------------------
 o Fixing last warning on MacOS
 
CHANGES IN VERSION 2.7.11
-------------------------
 o Fix failing example and test due to updated msdata::protemics data
 
CHANGES IN VERSION 2.7.10
-------------------------
 o compiling and loading on Windows (hopefully)
 
CHANGES IN VERSION 2.7.9
------------------------
 o Updating Makevars.win 
 
CHANGES IN VERSION 2.7.8
------------------------
 o compile pwiz when installing on Windows <2016-09-26 Mon>
 
CHANGES IN VERSION 2.7.7
------------------------
 o add netcdf static lib; potential incompatibility <2016-09-22 Thu>
 
CHANGES IN VERSION 2.7.6
------------------------
 o new isolationWindow accessor <2016-09-23 Fri>
 
CHANGES IN VERSION 2.7.5
------------------------
 o Apply Martin's free/delete patch - see
   https://github.com/sneumann/mzR/issues/52 <2016-09-22 Thu>
 
CHANGES IN VERSION 2.7.4
------------------------
 o upgrade pwiz
 o ensure file connections are cleaned and closed for pwiz.

CHANGES IN VERSION 2.7.1
------------------------
 o revert added compiler switch, and fixed boost code instead to get rid of warnings

CHANGES IN VERSION 2.5.8
------------------------
 o fix compiler Warning with clang on MacOS

CHANGES IN VERSION 2.5.7
------------------------
 o fix compilation with clang on MacOS

CHANGES IN VERSION 2.5.6
------------------------
 o fix compilation on new windows toolchain,
   thanks to Kasper Daniel Hansen and Dan Tenenbaum

CHANGES IN VERSION 2.5.3
------------------------
 o new pwiz.version() function returning the pwiz backend version (KK)

CHANGES IN VERSION 2.5.2