@@ -25,7 +25,7 @@ exportMethods(close,
               detector,
               header,
               peaksCount,
-              peaks,
+              peaks, scans,
               get3Dmap,
               softwareInfo,
               sampleInfo,
