@@ -22,28 +22,31 @@ setMethod("length",
             return(length(scanindex))
           })
 
-setMethod("peaks",
-          signature=c("mzRnetCDF"),
+setMethod("peaks", "mzRnetCDF",
           function(object, scans) {
-              if (missing(scans)) 
+              if (missing(scans))
                   scans <- 1:length(object)
-
               rawdata <- netCDFRawData(object@backend)
 
               if (length(scans) == 1) {
-                  idx <- seq(rawdata$scanindex[scans]+1,
-                             min(rawdata$scanindex[scans+1],
-                                 length(rawdata$mz), na.rm=TRUE))              
-                  return(cbind(mz=rawdata$mz[idx],intensity=rawdata$intensity[idx]))
+                  idx <- seq(rawdata$scanindex[scans] + 1,
+                             min(rawdata$scanindex[scans + 1],
+                                 length(rawdata$mz), na.rm = TRUE))
+                  return(cbind(mz = rawdata$mz[idx],
+                               intensity = rawdata$intensity[idx]))
               } else {
-                  return(sapply(scans,function(x) {
-                      idx <- seq(rawdata$scanindex[x]+1,
-                                 min(rawdata$scanindex[x+1],
-                                     length(rawdata$mz), na.rm=TRUE))
-                      cbind(mz=rawdata$mz[idx],intensity=rawdata$intensity[idx])
+                  return(sapply(scans, function(x) {
+                      idx <- seq(rawdata$scanindex[x] + 1,
+                                 min(rawdata$scanindex[x + 1],
+                                     length(rawdata$mz), na.rm = TRUE))
+                      cbind(mz = rawdata$mz[idx],
+                            intensity = rawdata$intensity[idx])
                   }, simplify = FALSE))
               }
           })
+
+setMethod("scans", "mzRnetCDF",
+          function(object, scans) peaks(object, scans))
 
 ## setMethod("peaksCount",
 ##           signature=c("mzRnetCDF","numeric"),
