@@ -1,3 +1,16 @@
+.peaks <- function(object, scans) {
+    if (missing(scans))
+        scans <- 1:length(object)
+    if (length(scans) == 1) {
+        return(object@backend$getPeakList(scans)$peaks)
+    } else {
+        return(sapply(scans,
+                      function(x) object@backend$getPeakList(x)$peaks,
+                      simplify = FALSE))
+    }
+}
+
+
 setMethod("isolationWindow", "character",
           function(object, ...) .isolationWindow(object, ...))
 
