@@ -2,6 +2,8 @@ CHANGES IN VERSION 2.9.1
 ------------------------
  o Delete RAMPAdapter pointer in pwiz backend (by jotsetung)
    <2016-11-20 Sun>
+ o Use spectra in addition to peaks (see issue #15)
+   <2016-12-09 Fri>
 
 CHANGES IN VERSION 2.9.0
 ------------------------
